Add seller edit and delete
