# internal/api/v1/api.go
@@ -5,6 +5,7 @@ import (
 
 	"github.com/c-kissel/SellerMDM.git/internal/api/v1/seller"
 	"github.com/c-kissel/SellerMDM.git/specs"
+	"github.com/google/uuid"
 )
 
 // Quick check if api specification valid
@@ -18,7 +19,9 @@ type SellerHandler interface {
 	GetSeller(w http.ResponseWriter, r *http.Request, id string)
 	GetSellersAll(w http.ResponseWriter, r *http.Request)
 	GetSellersByName(w http.ResponseWriter, r *http.Request, params specs.GetSellersByNameParams)
-	PostSeller(w http.ResponseWriter, r *http.Request)
+	PostNewSeller(w http.ResponseWriter, r *http.Request)
+	PutSeller(w http.ResponseWriter, r *http.Request, id uuid.UUID)
+	DeleteSeller(w http.ResponseWriter, r *http.Request, id uuid.UUID)
 }
 
 type Server interface {
