# internal/core/data/seller/model.go
@@ -7,13 +7,15 @@ import (
 )
 
 type SellerModel struct {
-	ID        uuid.UUID `db:"id"`
-	Name      string    `db:"name"`
-	OGRN      string    `db:"ogrn"`
-	INN       string    `db:"inn"`
-	City      string    `db:"city"`
+	City      *string   `db:"city"`
 	CreatedAt time.Time `db:"created_at"`
+	Id        uuid.UUID `db:"id"`
+	INN       *string   `db:"inn"`
+	Logo      *string   `db:"logo"`
+	Memo      *string   `db:"memo"`
+	Name      string    `db:"name"`
+	OGRN      *string   `db:"ogrn"`
+	Site      *string   `db:"site"`
 	UpdatedAt time.Time `db:"updated_at"`
-	// ImageNames []string  `db:"imagenames"`
-	// Description string    `db:"description"`
+	YML       *string   `db:"yml"`
 }
